<resources>
    <string name="app_name">PillsReminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="here_what_we_find">Вот, что нам удалось найти:</string>
    <string name="enter_pills_item">Введите название препарата</string>
    <string name="medication_frequency_header">Как часто Вы будете принимать %1s?</string>
    <string name="medication_frequency_header_example">Как часто Вы будете принимать \"Лекарство с очень-очень длинным названием, чтобы протестировать длинные названия\"?</string>
    <string name="once_per_day">Один раз в день</string>
    <string name="twice_per_day">Два раза в день</string>
    <string name="when_needed">По мере необходимости</string>
    <string name="planning">Планирование</string>
    <string name="frequency_once_per_day">Частота - один раз в день</string>
    <string name="hour">Час</string>
    <string name="dose">Дозировка</string>
    <string name="plan">Запланировать</string>
    <string name="first_dose">Первая доза</string>
    <string name="second_dose">Вторая доза</string>
    <string name="dose_hint">Выбрать дозировку</string>
    <string name="its_time_to_medication">Пора принять лекарство</string>
    <string name="notification_title_error">Ошибка получения заголовка уведомления</string>
    <string name="drug_name_error">Ошибка получения название лекарства</string>
    <string name="intent_error">Intent error</string>
    <string name="get_drug_notification_button">ПРИНЯТЬ</string>
    <string name="cancel_drug_notification_button">ОТМЕНИТЬ</string>
    <string name="dosage_error">Ошибка получения дозировки</string>
    <string name="notification_drug_name_title">лекарство: %1s</string>
    <string name="notification_dosage_title">дозировка: %1s</string>
    <string name="pill_name_example">Аспирин</string>
    <string name="add_new_medication_event_fab_description">Добавление нового события \"Прием лекарства\"</string>
    <string name="next_button_text">Далее</string>
    <string name="arguments_error">Ошибка передачи аргументов</string>
    <string name="medication_days_header">Cколько дней Вы будете принимать лекарство?</string>
    <string name="left_arrow_button_description">Кнопка с левой стрелкой</string>
    <string name="right_arrow_button_description">кнопка с правой стрелкой</string>
    <string name="days_count_default_value">1</string>
    <string name="time_picker_text_view">%1s:%2s</string>
    <string name="set_time">выбрать время</string>
    <string name="notification_is_set">Напоминание установлено</string>
    <string name="set_time_warning">Установите время</string>
    <string name="set_dosage_warning">Введите дозировку</string>
    <string name="time_picker_title">Время приема лекарства</string>
    <string name="fill_field">Заполните поле</string>
    <string name="medication_failure_message">не принято</string>
    <string name="medication_success_message">принято в %1s</string>
    <string name="calendar_legend_planned_text">Запланирован прием лекарств</string>
    <string name="calendar_legend_failure_text">Хотя бы одно лекарство не принято</string>
    <string name="calendar_legend_success_text">Все лекарства приняты</string>
    <string name="header_monday">ПН</string>
    <string name="header_tuesday">ВТ</string>
    <string name="header_wednesday">СР</string>
    <string name="header_thursday">ЧТ</string>
    <string name="header_friday">ПТ</string>
    <string name="header_saturday">СБ</string>
    <string name="header_sunday">ВС</string>
    <string name="pills_list_title">Список напоминаний</string>
    <string name="schedule_calendar_title">Календарь</string>
    <string name="pill_name_error">Ошибка получения названия лекарства</string>
    <string name="Delete">Удалить</string>
    <string name="null_extras_id_error_msg">ID can not be null</string>
    <string name="null_extras_time_error_msg">ReminderTime can not be null</string>
    <string name="confirmed_medication_action">Прием лекарства подтвержден</string>
    <string name="canceled_medication_action">Прием лекарства пропущен</string>
</resources>