<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/main_layout_padding">

    <TextView
        android:id="@+id/frequency_question_text_view"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/medication_frequency_header_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/medication_frequency_header_example" />

    <RadioGroup
        android:id="@+id/frequency_radio_group"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/once_per_day_radio_button"
        app:layout_constraintBottom_toTopOf="@id/medication_times_question_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frequency_question_text_view">

        <RadioButton
            android:id="@+id/once_per_day_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/once_per_day"
            android:textSize="@dimen/radio_button_text_size" />

        <RadioButton
            android:id="@+id/twice_per_day_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/twice_per_day"
            android:textSize="@dimen/radio_button_text_size" />

        <RadioButton
            android:id="@+id/when_needed_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/when_needed"
            android:textSize="@dimen/radio_button_text_size" />
    </RadioGroup>

    <TextView
        android:id="@+id/medication_times_question_text_view"
        android:layout_width="@dimen/zero_value"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/medication_days_header"
        android:textSize="@dimen/medication_frequency_header_size"
        app:layout_constraintBottom_toTopOf="@id/medication_days_decrement_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frequency_radio_group" />

    <ImageView
        android:id="@+id/medication_days_decrement_button"
        style="@style/arrowButtonStyle"
        android:contentDescription="@string/left_arrow_button_description"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintBottom_toTopOf="@id/frequency_next_screen_button"
        app:layout_constraintEnd_toStartOf="@id/frequency_days_count_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medication_times_question_text_view" />

    <ImageView
        android:id="@+id/medication_days_increment_button"
        style="@style/arrowButtonStyle"
        android:contentDescription="@string/right_arrow_button_description"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@id/medication_days_decrement_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/frequency_days_count_text_view"
        app:layout_constraintTop_toTopOf="@id/medication_days_decrement_button" />

    <TextView
        android:id="@+id/frequency_days_count_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_count_default_value"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/medication_days_decrement_button"
        app:layout_constraintEnd_toStartOf="@id/medication_days_increment_button"
        app:layout_constraintStart_toEndOf="@id/medication_days_decrement_button"
        app:layout_constraintTop_toTopOf="@id/medication_days_decrement_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/frequency_next_screen_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>