<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pill_card_view"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:cardBackgroundColor="@color/cards_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp">

            <ImageView
                android:id="@+id/pill_icon_image_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/pill_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/medication_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/header_dark_grey"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/pill_icon_image_view"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Аспирин" />

            <TextView
                android:id="@+id/schedule_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:maxLines="2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/medication_title_text_view"
                app:layout_constraintTop_toBottomOf="@+id/medication_title_text_view"
                tools:text="Индивидуальный. Разовая доза - от 250 мг до 1 г, суточная - от 250 мг до 3 г; кратность применения - 2-6 раз/сут." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pill_card_view">

        <TextView
            android:id="@+id/planning_text_view"
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/planning"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/frequency_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/once_per_day"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/planning_text_view" />

        <TextView
            android:id="@+id/hour_text_view"
            style="@style/SettingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/hour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frequency_text_view" />

        <TextView
            android:id="@+id/once_per_day_time_picker_text_view"
            style="@style/PickerSettingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBaseline_toBaselineOf="@id/hour_text_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/time_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_field"
            android:textColor="#FF0C0C"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/once_per_day_time_picker_text_view" />

        <TextView
            android:id="@+id/dose_text_view"
            style="@style/SettingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/dose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hour_text_view" />

        <EditText
            android:id="@+id/dose_picker_edit_text"
            style="@style/PickerSettingStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="end"
            android:hint="@string/dose_hint"
            android:inputType="number"
            android:selectAllOnFocus="true"
            app:layout_constraintBaseline_toBaselineOf="@id/dose_text_view"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/dose_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_field"
            android:textColor="#FF0C0C"
            tools:visibility="visible"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dose_picker_edit_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plan_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:text="@string/plan"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>